<resources xmlns:tools="http://schemas.android.com/tools" tools:keep="@string/xposed_module_updated_notification_*,@string/module_is_not_activated_*">
    <string name="overview">Overview</string>
    <string name="Modules">Modules</string>
    <plurals name="modules_enabled_count">
        <item quantity="one">%d module enabled</item>
        <item quantity="other">%d modules enabled</item>
    </plurals>
    <string name="Logs">Logs</string>
    <string name="Settings">Settings</string>
    <string name="feedback_or_suggestion">Feedback or suggestion</string>
    <string name="About">About</string>
    <string name="report_issue">Report issue</string>
    <string name="module_repo">Repository</string>
    <string name="module_repo_up_to_date">All modules up to date</string>
    <string name="module_repo_published_time">Published at %s</string>
    <string name="module_repo_updated_time">Updated at %s</string>
    <plurals name="module_repo_upgradable">
        <item quantity="one">%d module upgradable</item>
        <item quantity="other">%d modules upgradable</item>
    </plurals>
    <string name="about_view_source_code"><![CDATA[View source code at %1$s<br/>Join our %2$s channel]]></string>
    <string name="translators" comment="Dear translators, please add your home page here following the format. There can be more than one translator. So feel free to append yourself.">null</string>
    <string name="install">Install</string>
    <string name="install_summary">Tap to install LSPosed</string>
    <string name="not_installed">Not installed</string>
    <string name="not_install_summary">LSPosed is not Installed</string>
    <string name="activated">Activated</string>
    <string name="partial_activated">Partially activated</string>
    <string name="selinux_policy_not_loaded_summary">SEPolicy is not loaded properly</string>
    <string name="selinux_policy_not_loaded"><![CDATA[Some features will not work.<br/>Please report this to <a href="https://github.com/topjohnwu/Magisk/issues"><b>Magisk</b></a> developer.]]></string>
    <string name="system_inject_fail_summary">System Framework injection failed</string>
    <string name="system_inject_fail"><![CDATA[This is rare and may be caused by <b>Magisk</b> or some low-quality Magisk modules.<br/>Please try to disable Magisk modules other than Riru and LSPosed or submit full log to developers.]]></string>
    <string name="system_prop_incorrect_summary">System prop incorrect</string>
    <string name="system_prop_incorrect"><![CDATA[Some necessary system properties deleted or modified.<br/>Modules may invalidate occasionally.]]></string>
    <string name="need_update">Need to update</string>
    <string name="please_update_summary">Please install the latest version of LSPosed</string>
    <string name="developer_warning_title">Tips for module developer</string>
    <string name="developer_warning_summary">Please disable deploy optimizations on Android Studio, or use `gradlew installDebug` command to install. Otherwise the module apk will not be updated.</string>
    <string name="info_api_version">API version</string>
    <string name="info_framework_version">Framework version</string>
    <string name="info_manager_package_name">Manager package name</string>
    <string name="info_system_version">System version</string>
    <string name="info_device">Device</string>
    <string name="info_system_abi">System ABI</string>
    <string name="info_dex2oat_wrapper">Dex Optimizer Wrapper</string>
    <string name="enabled">Enabled</string>
    <string name="not_enabled">Not enabled</string>
    <string name="supported">Supported</string>
    <string name="unsupported">Unsupported</string>
    <string name="android_version_unsatisfied">Android version unsatisfied</string>
    <string name="crashed">Crashed</string>
    <string name="mount_failed">Mount failed</string>
    <string name="selinux_permissive">SELinux is permissive</string>
    <string name="sepolicy_incorrect">SELinux policy is incorrect</string>
    <string name="update_lsposed">Update LSPosed</string>
    <string name="update_lsposed_msg">Confirm to update LSPosed? This device will reboot after update completion</string>
    <string name="info_copied">Copied to clipboard</string>
    <string name="parasitic_welcome">Welcome to LSPosed</string>
    <string name="parasitic_welcome_summary">You are using the parasitic manager, which can create shortcut or still open from notification.</string>
    <string name="parasitic_welcome_summary_no_shortcut_support">You are using the parasitic manager, which can open from notification.</string>
    <string name="create_shortcut">Create shortcut</string>
    <string name="never_show">Never show</string>
    <string name="app_welcome">Parasitic Manager Recommended</string>
    <string name="app_welcome_summary">LSPosed now supports system parasitization to avoid detection, you can open parasitic manager from notification. It is recommended to uninstall the current application.</string>
    <string name="menuSaveToSd">Save</string>
    <string name="nav_item_logs_verbose">Verbose Logs</string>
    <string name="nav_item_logs_module">Modules Logs</string>
    <string name="logs_saving">Saving log, please wait</string>
    <string name="logs_saved">Logs saved</string>
    <string name="logs_save_failed2">Failed to save:\n%s</string>
    <string name="menuClearLog">Clear log now</string>
    <string name="logs_cleared">Log successfully cleared.</string>
    <string name="scroll_top">Scroll to top</string>
    <string name="loading">Loading…</string>
    <string name="scroll_bottom">Scroll to bottom</string>
    <string name="menuReload">Reload</string>
    <string name="logs_clear_failed_2">Failed to clear the log</string>
    <string name="menu_enable_word_wrap">Word Wrap</string>
    <string name="enabled_verbose_log">Verbose log enabled</string>
    <string name="disabled_verbose_log">Verbose log disabled</string>
    <string name="module_empty_description">(no description provided)</string>
    <string name="warning_xposed_min_version">This module requires a newer Xposed version (%d) and thus cannot be activated</string>
    <string name="warning_target_version_higher">This module is designed for a newer Xposed version (%d) and thus some functionalities may not work</string>
    <string name="no_min_version_specified">This module does not specify the Xposed version it needs.</string>
    <string name="warning_min_version_too_low">This module was created for Xposed version %1$d, but due to incompatible changes in version %2$d, it has been disabled</string>
    <string name="warning_installed_on_external_storage">This module cannot be loaded because it\'s installed on the SD card, please move it to internal storage</string>
    <string name="module_uninstall">Uninstall</string>
    <string name="module_settings">Module settings</string>
    <string name="view_in_repo">View in Repo</string>
    <string name="module_uninstall_message">Do you want to uninstall this module?</string>
    <string name="module_uninstalled">Uninstalled %1$s</string>
    <string name="module_uninstall_failed">Uninstall unsuccessful</string>
    <string name="add_module_to_user">Add module to user</string>
    <string name="module_installed">Added %1$s to user %2$s</string>
    <string name="module_install_failed">Adding module failed</string>
    <string name="install_to_user">Install to user %s</string>
    <string name="install_to_user_message">Want to install %1$s to user %2$s? It is recommended to install manually, forcing installation via LSPosed may cause problems.</string>
    <string name="expand">expand</string>
    <string name="collapse">collapse</string>
    <string name="compile_speed">Re-optimize</string>
    <string name="compile_speed_msg">Optimizing…</string>
    <string name="compile_done">Optimization complete</string>
    <string name="app_launch">Launch it</string>
    <string name="compile_failed">Optimization failed: return value is empty</string>
    <string name="compile_failed_with_info">Optimization failed: </string>
    <string name="sort_by_name">Application name</string>
    <string name="sort_by_package_name">Package name</string>
    <string name="sort_by_install_time">Install time</string>
    <string name="sort_by_update_time">Update time</string>
    <string name="sort_reverse">Reverse</string>
    <string name="menu_show_system_apps">System apps</string>
    <string name="menu_sort">Sorting</string>
    <string name="enable_module">Enable module</string>
    <string name="no_scope_selected">You did not select any app. Continue?</string>
    <string name="menu_show_games">Games</string>
    <string name="menu_show_modules">Modules</string>
    <string name="failed_to_save_scope_list">Failed to save scope list</string>
    <string name="app_version">Version: %1$s</string>
    <string name="menu_select">Select</string>
    <string name="use_recommended">Recommended</string>
    <string name="no_scope_selected_has_recommended">You did not select any app. Select recommended apps?</string>
    <string name="use_recommended_message">Select recommended apps?</string>
    <string name="menu_select_all">All</string>
    <string name="menu_select_none">None</string>
    <string name="menu_auto_include">Auto-Include</string>
    <string name="module_is_not_activated_yet">Xposed module is not activated yet</string>
    <string name="requested_by_module">Recommended</string>
    <string name="update_available">Update available: %1$s</string>
    <string name="module_disabled_no_selection">Module %s has been disabled since no app selected.</string>
    <string name="android_framework">System Framework</string>
    <string name="menu_backup_and_restore">Backup</string>
    <string name="menu_backup">Backup</string>
    <string name="menu_restore">Restore</string>
    <string name="force_stop">Force stop</string>
    <string name="force_stop_dlg_title">Force stop?</string>
    <string name="force_stop_dlg_text">If you force stop an app, it may misbehave.</string>
    <string name="reboot_required">Reboot is required for this change to apply</string>
    <string name="reboot">Reboot</string>
    <string name="menu_hide">Hide</string>
    <string name="modules_other_app">View in other app</string>
    <string name="module_app_info">App info</string>
    <string name="list_empty">¯\\_(ツ)_\/¯\nNothing here</string>
    <string name="unpack_group_target">Target</string>
    <string name="unpack_group_options">Options (override preset defaults)</string>
    <string name="unpack_group_action">Actions</string>
    <string name="unpack_target">Target package</string>
    <string name="unpack_preset">Preset</string>
    <string name="unpack_rasp">RASP-safe (traceless)</string>
    <string name="unpack_rasp_summary">whole: route the FindClass hook via KPM clone instead of Dobby</string>
    <string name="unpack_dobby">Force pure Dobby</string>
    <string name="unpack_dobby_summary">Do not engage the KPM (for shells that patch libart themselves)</string>
    <string name="unpack_extout">Dump location</string>
    <string name="unpack_interp_ms">Interp capture window (ms)</string>
    <string name="unpack_interp_ms_summary">dpt/fart: how long to capture at the interpreter point (default 30000)</string>
    <string name="unpack_worker_delay">Worker settle delay (ms)</string>
    <string name="unpack_worker_delay_summary">Sleep before the first ART touch (self-libart-patching shells)</string>
    <string name="unpack_arm">Arm</string>
    <string name="unpack_arm_summary">Write the preset props; the unpacker runs on the next launch of the target</string>
    <string name="unpack_disarm">Disarm</string>
    <string name="unpack_disarm_summary">Clear the master switch, target, and all tuning props</string>
    <string name="unpack_status">Current state</string>
    <string name="unpack_status_empty">Nothing armed</string>
</resources>